Grease Pencil Noise modifier step is ignored in render #67939

Closed
opened 2019-07-30 15:14:09 +02:00 by Ivan Cappiello · 10 comments
Member

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 570 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: 507ffee6e1
Worked: (optional)

Short description of error
setting noise step to 6 should update the noise value every 6 frame. In render this value is ignored and updated (seemingly interpolated) each frame.

Exact steps for others to reproduce the error
open the attached blend file and play the animation in viewport. The noise on the stroke will be updated correctly. Then render the sequence and look at the result.
test_GP_noise_render.blend

**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 570 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: `507ffee6e1` Worked: (optional) **Short description of error** setting noise step to 6 should update the noise value every 6 frame. In render this value is ignored and updated (seemingly interpolated) each frame. **Exact steps for others to reproduce the error** open the attached blend file and play the animation in viewport. The noise on the stroke will be updated correctly. Then render the sequence and look at the result. [test_GP_noise_render.blend](https://archive.blender.org/developer/F7637601/test_GP_noise_render.blend)
Author
Member

Added subscriber: @icappiello

Added subscriber: @icappiello
Author
Member

Added subscriber: @pepe-school-land

Added subscriber: @pepe-school-land
Antonio Vazquez was assigned by Ivan Cappiello 2019-07-30 15:27:01 +02:00

This issue was referenced by 9d7a03ab11

This issue was referenced by 9d7a03ab1177f7227653ec691e10ce328771a4eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

@antoniov after applying your patch the interpolation is gone but the noise still behaves very different from viewport and render. In render seems to just pop to the same noise value each step and then pop back to no noise value.
Can you please compare viewport and video render output to check if this is working as intended?

viewport:
testnoiseview.mov

render output:
testnoiserender.mp4

@antoniov after applying your patch the interpolation is gone but the noise still behaves very different from viewport and render. In render seems to just pop to the same noise value each step and then pop back to no noise value. Can you please compare viewport and video render output to check if this is working as intended? viewport: [testnoiseview.mov](https://archive.blender.org/developer/F7639667/testnoiseview.mov) render output: [testnoiserender.mp4](https://archive.blender.org/developer/F7639666/testnoiserender.mp4)

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

It's strange...in my PC is not working equal... I will look again.

It's strange...in my PC is not working equal... I will look again.

I have redesign how the noise random values work in D5393.

I have redesign how the noise random values work in [D5393](https://archive.blender.org/developer/D5393).

This issue was referenced by 80123efc5f

This issue was referenced by 80123efc5fc258ef8b27efba67d6ad2a0efb7edd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67939
No description provided.